Integrate AI-powered movie search with TMDB API and render results using reusable MovieList component
Integrate AI-powered movie search with TMDB API and render results using reusable MovieList component

Integrate AI-powered movie search with TMDB API and render results using reusable MovieList component

feat: add AI-powered movie suggestion with memorization and TMDB fetch

- Integrated OpenAI API to generate movie suggestions using natural language
- Implemented memorization to retain user's previous preferences for smarter recommendations
- After AI returns a movie name, fetches detailed movie data from TMDB API
- Rendered the selected movie details dynamically in the UI

feat: add AI-powered movie suggestion with memorization and TMDB fetch

- Integrated OpenAI API to generate movie suggestions using natural language
- Implemented memorization to retain user's previous preferences for smarter recommendations
- After AI returns a movie name, fetches detailed movie data from TMDB API
- Rendered the selected movie details dynamically in the UI

chore: remove hardcoded API keys and secure project

feat: AI-based movie search using OpenAI + TMDB, with memorization and online rendering

Clean push: removed secrets

Clean push: removed secrets

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^11.6.0",
     "lucide": "^0.487.0",
     "lucide-react": "^0.487.0",
+    "openai": "^4.94.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
